# notebook-pdf

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  tests-quarto.yml  tests.yml
examples/: test_notebook.ipynb
src/notebook_pdf/: __init__.py  _colab.py  _local.py  download_pdf.py  magic.py  notebook2pdf.py  notebook_retrieval.py
src/notebook_pdf/notebook_retrieval/: __init__.py  _errors.py  _name.py  blocking.py  drive.py  timeout.py
tests/: conftest.py  test_env.py  test_integration.py  test_magic.py  test_notebook2pdf.py
tests/notebooks/: test_local_render.ipynb
tests/test_notebook_retrieval/: test_dispatcher.py  test_drive.py  test_local.py  test_name.py
tests/test_render/: test_config.py  test_dependencies.py  test_prepare.py  test_render.py
